QQmlConnections: make overridden virtual functions protected

QQmlConnections overrides classBegin and componentComplete from
QQmlParserStatus. the purely virtual functions are public, but the
overridden functions are private.

this causes compile errors with qmltc generated code.

Change-Id: Ic586265412cbbec945a04bd2313f499738a10675
Task-Id: QTBUG-114359
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit d59e43d0a3e7b3a40d25f4476e1b51d0045a2018)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>